--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Portland_from_Pittock_Mansion_October_2019_panorama_2.jpg/1600px-Portland_from_Pittock_Mansion_October_2019_panorama_2.jpg); background-size: cover;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e6ccff;">
     <h1 class="title">EVENTNXT</h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
