--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
+<br><br><br><br>
+<body style="background: url(https://www.teahub.io/photos/full/197-1977791_portland-wallpapers-hd-portland-oregon-city-view.jpg); background-size: fixed; background-repeat: no-repeat;">
+<div style="text-align: center">
+<div>
+<h2 style="color: white">Don't worry, it happens to all of us.</h2>
 
+<br><br><br>
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+  <br>
+
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Your email address", style: "background-color: transparent; border: 2px solid white; border-radius: 2px; padding: 5px;"%>
   </div>
+
+  <br><br><br><br>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit("Send me password reset instructions", class:"btn btn-transparent btn-rounded", style:"border: 2px solid white; border-radius: 5px; color: white;") %>
   </div>
 <% end %>
-
+<br>
 <%= render "devise/shared/links" %>
+</div>
+</body>
