--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,38 @@
-<h2>Sign up</h2>
+<br><br><br><br>
+<body style="background: url(https://www.teahub.io/photos/full/197-1977791_portland-wallpapers-hd-portland-oregon-city-view.jpg); background-size: fixed; background-repeat: no-repeat;">
+<div style="text-align: center">
+<h2 style="color: white;">Sign up</h2><br>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "email address", style: "background-color: transparent; border: 2px solid white; border-radius: 2px; padding: 5px;" %>
   </div>
 
+  <br>
+
   <div class="field">
-    <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "password", style: "background-color: transparent; border: 2px solid white; border-radius: 2px; padding: 5px;" %>
+    <br>
+    <%= f.label "6 characters minimum" , :style => "color: white"%>
   </div>
 
+  <br>
+
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "confirm password", style: "background-color: transparent; border: 2px solid white; border-radius: 2px; padding: 5px;" %>
   </div>
+
+  <br>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit("Sign up", class:"btn btn-transparent btn-rounded", style:"border: 2px solid white; border-radius: 5px; color: white;")%>
   </div>
 <% end %>
-
+<br>
 <%= render "devise/shared/links" %>
+</div>
+</body>
