--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,22 @@
 <br><br><br><br>
-<body style="background: url(https://www.teahub.io/photos/full/197-1977791_portland-wallpapers-hd-portland-oregon-city-view.jpg); background-size: fixed; background-repeat: no-repeat;">
+<style>
+  body {
+   
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(https://www.teahub.io/photos/full/197-1977791_portland-wallpapers-hd-portland-oregon-city-view.jpg);
+    background-repeat: no-repeat; 
+    background-position: center;
+    background-attachment: fixed; 
+    webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height:100%;
+    width:100%; 
+    
+  }
+</style>
+
+<body>
 <div style="text-align: center">
 <div>
 <h2 style="color: white">Don't worry, it happens to all of us.</h2>
